--- a/res/layout/activity_generator_list.xml
+++ b/res/layout/activity_generator_list.xml
@@ -23,6 +23,13 @@
             android:layout_width="fill_parent" 
             android:layout_height="wrap_content"
             android:drawSelectorOnTop="false"/>
+ 
+        <ViewStub
+            android:id="@android:id/empty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout="@layout/empty"/>
 
     </FrameLayout>
 
