--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -21,11 +21,13 @@
             <Button android:id="@+id/home_btn_pattern_entry"
                 style="@style/HomeButton"
                 android:onClick="onPatternEntryClick"
-                android:text="@string/home_btn_pattern_entry"/>
+                android:text="@string/home_btn_pattern_entry"
+                android:drawableTop="@drawable/icon"/>
             <Button android:id="@+id/home_btn_generator"
                 style="@style/HomeButton"
                 android:onClick="onGeneratorClick"
-                android:text="@string/home_btn_generator"/>
+                android:text="@string/home_btn_generator"
+                android:drawableTop="@drawable/icon"/>
         </LinearLayout>
     </LinearLayout>
     
@@ -43,15 +45,17 @@
             <Button android:id="@+id/home_btn_tutorials"
                 style="@style/HomeButton"
                 android:onClick="onTutorialsClick"
-                android:text="@string/home_btn_tutorials"/>
+                android:text="@string/home_btn_tutorials"
+                android:drawableTop="@drawable/icon"/>
             <Button android:id="@+id/home_btn_pattern_list"
                 style="@style/HomeButton"
                 android:onClick="onPatternListClick"
-                android:text="@string/home_btn_pattern_list"/>
+                android:text="@string/home_btn_pattern_list"
+                android:drawableTop="@drawable/icon"/>
         </LinearLayout>
     </LinearLayout>
     
-    <!-- TODO Romain: Uncomment when ready:
+    <!-- TODO Romain: Uncomment when ready
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
@@ -66,11 +70,13 @@
             <Button android:id="@+id/home_btn_my_profile"
                 style="@style/HomeButton"
                 android:onClick="onMyProfileClick"
-                android:text="@string/home_btn_my_profile"/>
+                android:text="@string/home_btn_my_profile"
+                android:drawableTop="@drawable/icon"/>
             <Button android:id="@+id/home_btn_video"
                 style="@style/HomeButton"
                 android:onClick="onVideoClick"
-                android:text="@string/home_btn_video"/>
+                android:text="@string/home_btn_video"
+                android:drawableTop="@drawable/icon"/>
         </LinearLayout>
     </LinearLayout>
     -->
