New design. Pause animation.

--- a/res/layout/activity_animation.xml
+++ b/res/layout/activity_animation.xml
@@ -22,7 +22,8 @@
         <android.opengl.GLSurfaceView
             android:id="@+id/surface"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"/>
+            android:layout_height="fill_parent"
+            android:onClick="pause"/>
 
     </FrameLayout>
 
