--- a/res/drawable/action_bar_background.xml
+++ b/res/drawable/action_bar_background.xml
@@ -20,10 +20,15 @@
 <shape
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:shape="rectangle">
-	
-	<gradient
-		android:startColor="#817f81"
-		android:endColor="#ccc9cc"
-		android:angle="90" />
+    
+    <!-- <gradient
+        android:startColor="#817f81"
+        android:endColor="#ccc9cc"
+        android:angle="90" /> -->
+    
+    <gradient
+        android:startColor="#202020"
+        android:endColor="#505050"
+        android:angle="90" />
 		
 </shape>
