--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="pinned_header_background">#ff202020</color>
     
     <color name="prop_default_color">#ff0000</color> <!-- red -->
+
+    <color name="orange">#ff4a0e</color>
 </resources>
