--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textSize">@dimen/text_size_medium</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/foreground2</item>
+        <item name="android:textColor">@color/orange</item>
         <item name="android:background">@null</item>
     </style>
 
