--- a/trunk/res/layout/activity_home.xml
+++ b/trunk/res/layout/activity_home.xml
@@ -55,7 +55,6 @@
         </LinearLayout>
     </LinearLayout>
     
-    <!-- TODO Romain: Uncomment when ready
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
@@ -72,12 +71,13 @@
                 android:onClick="onMyProfileClick"
                 android:text="@string/home_btn_my_profile"
                 android:drawableTop="@drawable/icon"/>
+            <!-- TODO Romain: Unhide when ready -->
             <Button android:id="@+id/home_btn_video"
                 style="@style/HomeButton"
                 android:onClick="onVideoClick"
                 android:text="@string/home_btn_video"
-                android:drawableTop="@drawable/icon"/>
+                android:drawableTop="@drawable/icon"
+                android:visibility="invisible"/>
         </LinearLayout>
     </LinearLayout>
-    -->
 </LinearLayout>
