--- a/trunk/res/layout/activity_my_profile.xml
+++ b/trunk/res/layout/activity_my_profile.xml
@@ -24,21 +24,23 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
 
-            <TabWidget
-                android:id="@android:id/tabs"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"/>
-            <FrameLayout
-                android:id="@android:id/tabcontent"
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
-                <LinearLayout
-                    android:id="@+id/my_profile_content"
-                    android:orientation="vertical"
+
+                <TabWidget
+                    android:id="@android:id/tabs"
                     android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
-                </LinearLayout>
-            </FrameLayout>
+                    android:layout_height="wrap_content"/>
+
+                <FrameLayout
+                    android:id="@android:id/tabcontent"
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dip"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
 
         </TabHost>
 
