Added QuickActionGridTrick/Collection. Possibility to star/edit/add a label/share/delete a trick. Possibility to add/edit/delete a Collection.

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -77,6 +77,7 @@
         <item>Patterns by PWN</item>
         <item>Patterns By Scotch Tom</item>
         <item>Stupid Patterns By Chunky Kibbles</item>
+        <item>Starred</item>
     </string-array>
 
 	<string-array name="trick">
