--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -19,7 +19,8 @@
 
 <resources>
 
-	<item type="id" name="action_bar_view_info" />
+    <item type="id" name="action_bar_add" />
     <item type="id" name="action_bar_edit" />
+	<item type="id" name="action_bar_view_info" />
 
 </resources>
