--- a/trunk/res/layout/activity_home.xml
+++ b/trunk/res/layout/activity_home.xml
@@ -7,6 +7,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
     
+    <!-- TODO Fred|Romain: Change the icons -->
+    
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
