--- a/trunk/res/values/arrays.xml
+++ b/trunk/res/values/arrays.xml
@@ -77,6 +77,7 @@
         <item>Patterns by PWN</item>
         <item>Patterns By Scotch Tom</item>
         <item>Stupid Patterns By Chunky Kibbles</item>
+        <item>Starred</item>
     </string-array>
 
 	<string-array name="trick">
