--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -1,85 +1,38 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<com.jonglen7.jugglinglab.widget.DashboardLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res/com.jonglen7.jugglinglab"
-    android:id="@+id/home_root"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    
+
     <!-- TODO Fred|Romain: Change the icons -->
-    
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:padding="6dip">
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-            <Button android:id="@+id/home_btn_pattern_entry"
-                style="@style/HomeButton"
-                android:onClick="onPatternEntryClick"
-                android:text="@string/home_btn_pattern_entry"
-                android:drawableTop="@drawable/icon"/>
-            <Button android:id="@+id/home_btn_generator"
-                style="@style/HomeButton"
-                android:onClick="onGeneratorClick"
-                android:text="@string/home_btn_generator"
-                android:drawableTop="@drawable/icon"/>
-        </LinearLayout>
-    </LinearLayout>
-    
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:padding="6dip">
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-            <Button android:id="@+id/home_btn_tutorials"
-                style="@style/HomeButton"
-                android:onClick="onTutorialsClick"
-                android:text="@string/home_btn_tutorials"
-                android:drawableTop="@drawable/icon"/>
-            <Button android:id="@+id/home_btn_pattern_list"
-                style="@style/HomeButton"
-                android:onClick="onPatternListClick"
-                android:text="@string/home_btn_pattern_list"
-                android:drawableTop="@drawable/icon"/>
-        </LinearLayout>
-    </LinearLayout>
-    
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:padding="6dip">
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-            <Button android:id="@+id/home_btn_my_profile"
-                style="@style/HomeButton"
-                android:onClick="onMyProfileClick"
-                android:text="@string/home_btn_my_profile"
-                android:drawableTop="@drawable/icon"/>
-            <!-- TODO Romain: Unhide when ready -->
-            <Button android:id="@+id/home_btn_video"
-                style="@style/HomeButton"
-                android:onClick="onVideoClick"
-                android:text="@string/home_btn_video"
-                android:drawableTop="@drawable/icon"
-                android:visibility="invisible"/>
-        </LinearLayout>
-    </LinearLayout>
-</LinearLayout>
+
+    <Button android:id="@+id/home_btn_pattern_entry"
+        style="@style/DashboardButton"
+        android:text="@string/home_btn_pattern_entry"
+        android:onClick="onPatternEntryClick"
+        android:drawableTop="@drawable/icon" />
+
+    <Button android:id="@+id/home_btn_generator"
+        style="@style/DashboardButton"
+        android:text="@string/home_btn_generator"
+        android:onClick="onGeneratorClick"
+        android:drawableTop="@drawable/icon" />
+
+    <Button android:id="@+id/home_btn_tutorials"
+        style="@style/DashboardButton"
+        android:text="@string/home_btn_tutorials"
+        android:onClick="onTutorialsClick"
+        android:drawableTop="@drawable/icon" />
+
+    <Button android:id="@+id/home_btn_pattern_list"
+        style="@style/DashboardButton"
+        android:text="@string/home_btn_pattern_list"
+        android:onClick="onPatternListClick"
+        android:drawableTop="@drawable/icon" />
+
+    <Button android:id="@+id/home_btn_my_profile"
+        style="@style/DashboardButton"
+        android:text="@string/home_btn_my_profile"
+        android:onClick="onMyProfileClick"
+        android:drawableTop="@drawable/icon" />
+
+</com.jonglen7.jugglinglab.widget.DashboardLayout>
