--- a/res/layout/action_bar_item_star.xml
+++ b/res/layout/action_bar_item_star.xml
@@ -16,12 +16,21 @@
 ** limitations under the License.
 */
 -->
+<FrameLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent">
 
-<resources>
+	<include
+		layout="@layout/gd_action_bar_item_base" />
 
-    <item type="id" name="action_bar_add" />
-    <item type="id" name="action_bar_edit" />
-    <item type="id" name="action_bar_star" />
-	<item type="id" name="action_bar_view_info" />
+    <!-- TDDO Romain: Centrer la CheckBox -->
 
-</resources>
+    <CheckBox
+        android:id="@+id/btn_star"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:clickable="false"
+        android:button="@android:drawable/btn_star"/>
+
+</FrameLayout>
